Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 2.4.1:
============================

2021-02-nn Jose Kahan
	* src/string.c
	Very long mail subjects were not being handled correctly and could
	result in invalid markup.

	* src/hypermail.h
	changed the link pointing to the hypermail project to the github
	repository

	* src/print.c src/printfile.c
	updated markup to HTML5. Reviewed and enhanced the WAI related markup

	* src/hypermail.c src/setup.[ch] src/print.c
	new configuration option mhtmlnavbar2upfile to specify a hierarchin
	navbar for messages. By default uses the value of ihtmlnavbar2upfile

2021-06-04 Baptiste Daroussin
	* src/uudecode.c src/parse.c
	Fixes for memory issues detected by libasan

2020-06-19 Jose Kahan
	* src/domains.c
	valid_root_domains() was validating a domain name against the
	historical DNS domains such as .org, .com. DNS has evolved and allows a
	bigger variety of domains than those this function verified. That part
	of the function has been invalidated and will be either eventually
	removed or evolve to a user-configurable option.

2020-06-12 Jose Kahan
	* configure.ac
	configure didn't signal an error if yacc was not installed

	* src/string.c
	parseurl(): URLs were not detected and converted when they were
	preceeded by a : that was not attached to a valid URL like
	foo: https://example.com or : https://example.com

2020-02-23 @cacsar
	* Makefile.in
	make install wasn't working

============================
HYPERMAIL VERSION 2.4.0:
============================

2019-12-20 Jose Kahan
	* src/getdate.y
	A message's sent or received date with a specified TZ but without any
	seconds value was using the local date seconds value instead of 00.

2019-12-19 Jose Kahan
	* src/parse.c
	parsemail(): a Content-Transfer-Encoding header with a missing value
	would result in an unitialized variable being used to output an unknown